Исправили ошибки сонара